package com.dylanbeebe.fuelbuddy.domain.model.mileage

enum class FuelType {
    REGULAR, PLUS, PREMIUM, E85, DIESEL
}