@startuml

<style>
classDiagram {
        Linecolor purple
        arrow {
                FontColor black
                LineColor black
        }
}
</style>

entity "vehicle" as v {
        * **String : vehicleID <<PK>>**
        --
        * String : nickname
        String : make
        String : model
        Int : modelYear
        String : plate
}

entity "vehicle_attachment" as va {
        * **String : attachmentID <<PK>>**
        --
        * String : URI
        * **String : vehicle <<FK>>**
}

entity "mileage" as m {
        * **String : mileageID <<PK>>**
        --
        * String : timestamp
        * Double : odometerMiles
        * Double : volumeGallons
        * Boolean : isFullTank
        * Enum : fuelType
        * Boolean : isTopTier
        * Double : totalDollars
        String : journal
        * Boolean : isExported
        * **String : vehicle <<FK>>**
        ..
        ..
        <<unique>> (vehicle, timestamp)
}

entity "mileage_location" as ml {
        * **String : locationID <<PK>>**
        --
        * **Float : accuracy**,
        * **Double : latitude**,
        * **Double : longitude**,
        * **String : mileage <<FK>>**
}

entity "mileage_attachment" as ma {
        * **String : attachmentID <<PK>>**
        --
        * String : URI
        * **String : mileage <<FK>>**
}

enum "fuelType" as ft {
        REGULAR
        PLUS
        PREMIUM
        E85
        DIESEL
}

v ||..o{ va
v ||..o{ m
m ..> ft
m ||..o{ ma
m ||..o| ml

@enduml
